--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-10-28 16:01+0300\n"
-"PO-Revision-Date: 2024-10-28 00:44+0300\n"
+"PO-Revision-Date: 2024-10-28 16:18+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -6634,7 +6634,7 @@ msgstr "elections"
 #: state/templates/state/redesign/gov/government.html:237
 msgctxt "government"
 msgid "Выборы"
-msgstr "Elections"
+msgstr "Next election"
 
 #: state/templates/state/redesign/gov/government.html:243
 msgctxt "government"
